# IB9JHO-lab6

./: CMakeLists.txt  README.md
src/: binomial_expectation.c  binomial_expectation.h  main.c
tests/: CMakeLists.txt  test_binomial_expectation.cpp
